2008-11-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/random/wtay/poll-timeout:
	Quick braindump for a possible (not totally verified) atomic case.

2008-11-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstregistrybinary.c: (gst_registry_binary_write_chunk),
	(gst_registry_binary_initialize_magic),
	(gst_registry_binary_write_cache),
	(gst_registry_binary_check_magic):
	* gst/gstregistrybinary.h:
	Don't write and check a CRC for the binary registry file. It's
	guaranteed that the registry is completely written (it's first written
	to a temporary file and then moved) and if the registry was corrupted
	by some hardware failure we would have bigger problems.

	Bump binary registry version to 0.10.21.1 for this as it's an
	incompatible change and to ensure that the registry gets rebuild
	after the update.

	This saves some milliseconds for reading/writing the registry.
	Fixes bug #560399.

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/random/wtay/poll-timeout:
	Some pseudo code for how we could implement clock timeouts with GstPoll.

2008-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* plugins/elements/gstfilesink.c:
	  Update Author string to match others.

2008-11-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstvalue.c: (gst_type_is_fixed), (gst_value_is_fixed):
	Reorganize some more, be more conservative with the GST_TYPE_ARRAY not
	being fixed and inline the trivial check.

2008-11-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstcaps.c: (gst_caps_copy), (_gst_caps_free),
	(gst_caps_merge_structure), (gst_caps_get_structure),
	(gst_caps_copy_nth), (gst_caps_set_simple),
	(gst_caps_set_simple_valist), (gst_caps_is_fixed),
	(gst_caps_is_equal_fixed), (gst_caps_intersect),
	(gst_caps_subtract), (gst_caps_normalize), (gst_caps_do_simplify),
	(gst_caps_to_string):
	Callgrind micro optimisations.
	Avoid array bounds checks and force inline of trivial function.
