@@ -1,5 +1,10 @@
 2008-11-12  Wim Taymans  <wim.taymans@collabora.co.uk>
 
+	* tools/gst-inspect.c: (main):
+	Add --plugin option. Fixes #560301.
+
+2008-11-12  Wim Taymans  <wim.taymans@collabora.co.uk>
+
 	* docs/random/wtay/poll-timeout:
 	Quick braindump for a possible (not totally verified) atomic case.
 
